--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,10 @@
-name: pytorch0.4
+name: pytorch1.0
 channels:
   - pytorch
   - defaults
 dependencies:
   - python=3.6.5
-  - pytorch=0.4.1
+  - pytorch=1.0.0
   - torchvision
   - numpy
   - nltk
@@ -16,3 +16,5 @@ dependencies:
     - ipdb
     - msgpack
     - sumeval
+    - tensorboardX
+    - torch
